<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_android"
            android:title="@string/nav_os"/>
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_device"
            android:title="@string/nav_devices"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_on"
            android:title="@string/nav_fav"/>
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account"/>
    </group>

    <item android:title="@string/nav_links">
        <menu>
            <item
                android:id="@+id/nav_link1"
                android:icon="@drawable/ic_link"
                android:title="@string/nav_link1"/>
            <item
                android:id="@+id/nav_link2"
                android:icon="@drawable/ic_link"
                android:title="@string/nav_link2"/>
        </menu>
    </item>

</menu>
