<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:elevation="@dimen/card_elevation"
    android:clipToPadding="true"
    android:paddingBottom="96dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:showIn="@layout/activity_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textscale_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text Font Scale"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:textAppearance="?textAppearanceHeadline6" />

            <ImageButton
                android:id="@+id/textscale_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/vct_carat_up" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textscale_h1"
            android:text="@string/textscale_label_h1"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline1" />

        <TextView
            android:id="@+id/textscale_h2"
            android:text="@string/textscale_label_h2"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline2" />

        <TextView
            android:id="@+id/textscale_h3"
            android:text="@string/textscale_label_h3"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline3" />

        <TextView
            android:id="@+id/textscale_h4"
            android:text="@string/textscale_label_h4"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline4" />

        <TextView
            android:id="@+id/textscale_h5"
            android:text="@string/textscale_label_h5"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:id="@+id/textscale_h6"
            android:text="@string/textscale_label_h6"
            android:onClick="scaleTextItemClicked"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textscale_subtitle1"
            android:text="@string/textscale_label_subtitle1"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/textscale_subtitle2"
            android:text="@string/textscale_label_subtitle2"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceSubtitle2" />

        <TextView
            android:id="@+id/textscale_body1"
            android:text="@string/textscale_label_body1"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:id="@+id/textscale_body2"
            android:text="@string/textscale_label_body2"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceBody2" />

        <TextView
            android:id="@+id/textscale_button"
            android:text="@string/textscale_label_button"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceButton" />

        <TextView
            android:id="@+id/textscale_caption"
            android:text="@string/textscale_label_caption"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceCaption" />

        <TextView
            android:id="@+id/textscale_overline"
            android:text="@string/textscale_label_overline"
            style="@style/TextScaleStyle"
            android:textAppearance="?textAppearanceOverline" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>