<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionlayout_demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/complex_motion_scene"
    android:background="@color/window_background"
    tools:context="com.designdemo.uaha.ui.MotionLayoutActivity">

    <TextView
        android:id="@+id/text_the"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the"
        android:textColor="@color/special_teal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/nerd_text_img"
        android:src="@drawable/ic_nerderytxt_old"
        app:altSrc="@drawable/ic_nerderytxt_new"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"/>

    <ImageView
        android:id="@+id/pocketsq_img"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:src="@drawable/ic_nerd_square"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pull_down_to_see_the_new_logo_or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:background="@color/special_teal"
        android:textColor="@color/white"
        android:text="@string/launch_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/info_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.010" />


</androidx.constraintlayout.motion.widget.MotionLayout>
